package com.wali.live.proto.LiveMall;

/**

java -jar -Dfile.encoding=UTF-8 ./proto/wire-compiler-2.3.0-SNAPSHOT-jar-with-dependencies.jar \
--proto_path=./proto --java_out=./modulewatch/src/main/java-gen-pb/ LiveMall.proto

*/

//命令字： zhibo.shopping.stat_info

message StatInfoReq {
    required string room_id = 1;
    optional int64 uid = 2;
    optional int32 add_num = 3;
}

message StatInfoResp {
    required int32 err_code = 1;//返回码
    optional string err_msg= 2;
    optional int64 viewcount = 3; //返回目前观看人数
}

//命令字： zhibo.shopping.tap_to_sell

message  TapToSellReq {

    required string room_id = 1;
    required int64 uid = 2;

}

message  TapToSellResp {

    required int32 err_code = 1;//返回码
    optional string err_msg= 2;

}

message MultGetBuyingCountReq {
required string room_id = 1;
}

message MultGetBuyingCountResp {
required int32 err_code = 1;//返回码
optional string err_msg = 2;
repeated BuyingCountStore buying_store = 3;
}
//观众:列表+计数 zhibo.shopping.get_goods_list
message RoomGoodsListReq {
required string room_id = 1;
optional int64 host_id = 2;
}

message RoomGoodsListResp {
required int32 err_code = 1;
optional string err_msg = 2;
repeated GoodsInfo goods_info = 3;
optional OpText op_text = 4;
}

message GoodsInfo {
 required int64 sku = 1; //商品id
 optional string name = 2; //商品名
 optional string category = 3; //品类
 optional string brand_id = 4; //品牌id
 optional string brand_name = 5; //品牌名
 optional string shop_logo = 6; //店铺logo
 optional string shop_url = 7; //店铺
 optional string img = 8; //商品大图
 optional double mprice = 9; //市场价
 optional double price = 10; //当前价
 optional int32 status = 11;//上下柜状态: 0 下架 1 正常 10 删除
 optional int32 stock_state = 12; //库存:33 有货，39 有货在途 2-6天到仓库, 40 有货可配货 36 预订， 34 无货
 optional string stock_state_name = 13; //库存描述
 optional int32 shop_type = 14; //0 京东
 optional string goods_url = 15; //佣金url
 optional double income_rate = 16; //佣金比率
 optional int32 buy_number = 17; //购买数;
 optional bool   is_added_goods = 18;//标记是否已经添加过
 optional string shop_label = 19; //来源标签
 optional string host_label = 20;  //主播专有标签
 optional string promotion_label = 21; //促销活动标签
 optional string label = 22; //商品标签
 optional string price_label = 23; //价格标签
 optional string coupon_name = 24; //优惠券名字
 optional string coupon_url = 25;//优惠券地址
 optional string milive_income = 26; //新增电商佣金（元）
 optional string milive_host_income = 27; //直播补贴佣金
 optional string milive_host_gift = 28; //主播补贴钻石
 optional string milive_user_gift = 29; //观众补贴钻石
}

message OpText {
    required int32  text_type = 1; // 0 文字 1 文字加店铺主页 2 文字加优惠券
    optional bytes  text = 2; // 0 Text 1 ShopText
    optional string explanation = 3; //说明
}

message Text {
    required string text = 1;
}

message ShopText {
    required string text = 1;
    optional int64  shop_id = 2;
    optional string shop_url = 3;
    optional string url = 4;
}

//我的购物
//主播端 zhibo.shopping.select_goods
message SelectGoodsReq {
    required string room_id = 1;
    required int64 host_id = 2;
    optional int64 sku = 3; //分页
    optional int32 number = 4; //拉取size
    optional int64 pkg_id = 5; //商品包id
    optional int64 sort_id = 6;//排序id
}

message SelectGoodsResp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    repeated GoodsInfo goods_info = 3;
    optional int64 sort_id = 4;//排序id
}

message SearchToSellReq {
required string room_id = 1;
required int64 host_id = 2;
required string search_str = 3;
optional int64 sku = 4; //分页
optional int32 number = 5; //拉取size
optional int64 sort_id = 6;//排序id
}

message SearchToSellResp {
required int32 err_code = 1;
optional string err_msg = 2;
repeated GoodsInfo goods_info = 3;
optional int64 sort_id = 4;//排序id
}
//命令字：zhibo.shopping.add_goods
message AddGoodsReq {
required string room_id = 1;
required int64 host_id = 2;
repeated AddGoodsSkuList sku_list = 3;
}

message AddGoodsSkuList {
required int64 sku = 1;
required int32 op = 2; // 0, 添加 1, 删除
}

message AddGoodsResp {
required int32 err_code = 1;
optional string err_msg = 2;
}

//导购
message OrderInfoList {
required int32 shop_type = 1;
repeated OrderInfo order_info = 2;
}

//命令字：zhibo.shopping.get_sales_info
message OrderInfo {
    required int64  uid = 1; //用户
    optional int64  host_id = 2; //主播
    optional int32  shop_type = 3; // 0 京东
    optional int64  order_id = 4; //订单id
    repeated GoodsInfo goods_info = 5; //购吴信息
    optional double  total_price = 6; //总价
    optional int32  order_status = 7; //1 下单, 2 支付， 3 妥投, 4 退货, 5部分退货, 6 结算
    optional double income_value = 8;//佣金
    optional int64 create_time = 9; //订单日期
    optional int64 update_time = 10; //更新事件
    optional string room_id = 11; //房间
    optional string income_content = 12; //佣金内容？？
}

message SalesInfoReq {
required int64 host_id = 1;
optional int32 settle_type = 2;//0:月佣金 1:所有订单佣金 不设置改字段为本月的
}

message SalesInfoResp {
required int32 err_code = 1;
optional string err_msg = 2;
required double monthly_settled_income = 3;
required double monthly_income = 4;
required int32 monthly_order_number =5;
}

//命令字：zhibo.shopping.get_sales_orders
message SalesOrderReq {
required int64 host_id = 1;
repeated int32 order_status_list = 2; //1 下单, 2 支付成功, 3 妥投, 4 全部退货, 5 整单退货, 6 结算
optional int64 timestamp = 3;
optional int32 number = 4;
}

message SalesOrderResp {
required int32 err_code = 1;
optional string err_msg = 2;
repeated OrderInfo order_info = 3;
optional int64 timestamp = 4;
}

//命令字: zhibo.shopping.shopping_sales_list

//存储
message RoomGoodsListStore {
required string room_id = 1;
repeated GoodsInfo goods_info = 2;
required int64 timestamp = 3;
}

message BuyingCountStore {
    required string room_id = 1;
    required int64 host_id = 2;
    required int64 buying_count = 3; //返回目前观看人数
}
//命令字: zhibo.shopping.user_order_info
//返回我的订单列表
message UserOrderInfoReq {
required int64 uid = 1;
}

message TBContent {
    required string content = 1;
}

message UserOrderInfoResp {
required int32 err_code = 1;
optional string err_msg = 2;
repeated UserOrder user_order = 3;
}

message UserOrder {
required int32 shop_type = 1;
repeated string img_url = 2;
}

//主播添加商品 push ： 345
message ShoppingMsgExt {
required int32 msg_type = 1; //0 上架 1下架 2购买成功 4淘宝图片 3淘宝文字
optional bytes msg_content = 2;//0 GoodsInfo 2,3 GoodsInfoList 4 String
}

//命令字:zhibo.shopping.sales_list
//拉取购物直播主播列表
message SalesListReq {
required uint64 uid =1; //用户id
}

message SalesListResp {
required uint32 err_code = 1;
optional string err_msg = 2;
repeated ChannelItem liveinfo = 3;
}

message ChannelItem{
    required uint32 uiType = 1;
    required bytes  uiData = 2;
    }
message GoodsInfoList {
    repeated GoodsInfo  goods_info = 1; //商品信息
}

//命令字: zhibo.shopping.taobao_buying
//观众点击一个淘宝商品，废弃
message TaobaoBuyingReq {
required int64 uid = 1;
required int64 host_id = 2;
required string room_id = 3;
repeated GoodsInfo good_info = 4;
}
message TaobaoBuyingResp {
required int32 err_code = 1;
optional string err_msg = 2;
}

//命令字：zhibo.shopping.gen_user_order
//观众购买成功淘宝商品发送给服务器
message GenUserOrderReq {
    required OrderInfo order_info = 1;
    optional string room_id = 2;
}

message GenUserOrderResp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

//zhibo.shopping.goods_tap_stat
//观众点击商品统计
message GoodsTapStatReq {
    required int64 uid = 1;
    required int64 host_id = 2;
    required string room_id = 3;
    repeated GoodsInfo good_info = 4;
}

message GoodsTapStatResp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

//主播端 zhibo.shopping.all_goods
message AllGoodsReq {
    required string room_id = 1;
    required int64 host_id = 2;
}

message AllGoodsResp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    repeated PkgInfoList pkg_info_list = 3;
}

message PkgInfo {
    optional int64  pkg_id = 1; //二级商品包id
    optional string pkg_name = 2; //二级商品包name
    optional string pkg_desc = 3; //二级商品包desc
    optional string pkg_url = 4;//缩略图
}

message PkgInfoList {
    required string item_name = 1; //一级分类名称
    repeated PkgInfo pkg_info = 2;
}

 //命令字：zhibo.shopping.tap_ad_push
 message TapAdPushReq {
     required int64 uid = 1;
     required int64 host_id = 2;
     required string room_id = 3;
     optional int64 sku = 4;
     optional int32 shop_type = 5;
 }

 message TapAdPushResp {
     required int32 err_code = 1;
     optional string err_msg = 2;
 }

 //命令字：zhibo.shopping.get_pid  获取主播pid，购物唯一表示，来分佣金
 message GetPidReq {
 required int64 host_id = 1;
 }
 message GetPidResp {
 required uint32 err_code = 1;
 optional string err_msg = 2;
 optional string pid = 3;

 }


